<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="sv.ues.fia.eisi.bt.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="sv.ues.fia.eisi.bt.ui.auth.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_register_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="sv.ues.fia.eisi.bt.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_tableDetail"
            app:destination="@id/tableDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_dashboard_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/dashboardFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_dashboard_to_bulkOferta"
            app:destination="@id/servicio1Fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left" />
        <action
            android:id="@+id/action_dashboard_to_servicio3"
            app:destination="@id/servicio3Fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left" />
        <action
            android:id="@+id/action_dashboard_to_servicio4"
            app:destination="@id/servicio4Fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/tableDetailFragment"
        android:name="sv.ues.fia.eisi.bt.ui.crud.TableDetailFragment"
        android:label="{tableName}"
        tools:layout="@layout/fragment_table_detail">
        <argument
            android:name="tableName"
            app:argType="string" />
        <argument
            android:name="tableDisplayName"
            app:argType="string" />
    </fragment>

    <dialog
        android:id="@+id/editorDialogFragment"
        android:name="sv.ues.fia.eisi.bt.ui.crud.EditorDialogFragment"
        android:label="@string/add">
        <argument
            android:name="tableName"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="isEditMode"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="itemData"
            app:argType="string"
            android:defaultValue="" />
    </dialog>

    <fragment
        android:id="@+id/servicio1Fragment"
        android:name="sv.ues.fia.eisi.bt.ui.servicios.Servicio1Fragment"
        android:label="@string/oferta_titulo_seccion"
        tools:layout="@layout/fragment_servicio1" />

    <fragment
        android:id="@+id/servicio3Fragment"
        android:name="sv.ues.fia.eisi.bt.ui.servicios.Servicio3Fragment"
        android:label="@string/s3_titulo"
        tools:layout="@layout/fragment_servicio3" />

    <fragment
        android:id="@+id/servicio4Fragment"
        android:name="sv.ues.fia.eisi.bt.ui.servicios.Servicio4Fragment"
        android:label="@string/s4_titulo"
        tools:layout="@layout/fragment_servicio4" />

</navigation>